--- a/Views/SierraReports/AddNewReportSub.cshtml
+++ b/Views/SierraReports/AddNewReportSub.cshtml
@@ -1,4 +1,5 @@
 ﻿@model eComm_Reporting_Application.Models.AddNewReportSubDropdownModel
+@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Xsrf
 @{
     ViewData["Title"] = "Add New Report Subscription";
 }
@@ -18,6 +19,8 @@
         <h1 class="title-text">Add New Sierra Report Subscription</h1>
     </div>
 </div>
+
+<input type="hidden" id="RequestVerificationToken" name="RequestVerificationToken" value="@Xsrf.GetAndStoreTokens(Context).RequestToken" />
 
 <div class="filter-data">
     <div class="addnew-row">
